text overflow issue solved
(cherry picked from commit 9df7052)

--- a/public/sximo/css/sximo.css
+++ b/public/sximo/css/sximo.css
@@ -3454,3 +3454,7 @@ span.order_custom_error ~ ul.parsley-error-list
     word-wrap: break-word;
     word-break: break-all;
 }
+.table-striped tbody td
+{
+  word-wrap: break-word;
+}
